<resources>
    <string name="app_name">CinemaGuide</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_journeys">Путешествия</string>
    <string name="menu_films">Фильмы</string>
    <string name="menu_locations">Локации</string>
    <string name="menu_creator">Пополнить базу</string>
    <string name="menu_profile">Мой профиль</string>
    <string name="menu_messages">Мои сообщения</string>
    <string name="menu_thanks">Благодарности</string>
</resources>
